[-] Wrong usage of I18n pluralization

--- a/config/locales/tolk.en.yml
+++ b/config/locales/tolk.en.yml
@@ -30,7 +30,7 @@ fr:
       remaining:
         zero: 'All translated'
         one: 'One translation remaining'
-        other: '%{missing} translations remaining'
+        other: '%{count} translations remaining'
     alert:
       close: 'Close'
     all:
